[package]
name = "actix"
version = "0.1.0"
authors = ["Matt Lockyer <mattdlockyer@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2"
actix-web = { version = "1.0.0-beta.4", features=["ssl"] }
actix-session = "0.1.0-beta.2"

futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"

json = "*"
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"

diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }